js: now nodes hold parent as well making debugging and advanced ast use cases easier improve karate js and markup infra