@@ -35,23 +35,23 @@ class Interpreter {
     static final Logger logger = LoggerFactory.getLogger(Interpreter.class);
 
     private static List<String> argNames(Node fnArgs) {
-        List<String> list = new ArrayList<>(fnArgs.children.size());
-        for (Node fnArg : fnArgs.children) {
+        List<String> list = new ArrayList<>(fnArgs.size());
+        for (Node fnArg : fnArgs) {
             if (fnArg.type != NodeType.FN_DECL_ARG) {
                 continue;
             }
-            Node first = fnArg.children.get(0);
+            Node first = fnArg.get(0);
             if (first.token.type == DOT_DOT_DOT) { // varargs
-                list.add("." + fnArg.children.get(1).getText());
+                list.add("." + fnArg.get(1).getText());
             } else {
-                list.add(fnArg.children.getFirst().getText());
+                list.add(fnArg.getFirst().getText());
             }
         }
         return list;
     }
 
     private static Terms terms(Node node, DefaultContext context) {
-        return terms(eval(node.children.get(0), context), eval(node.children.get(2), context));
+        return terms(eval(node.get(0), context), eval(node.get(2), context));
     }
 
     private static Terms terms(Object lhs, Object rhs) {
@@ -59,9 +59,9 @@ class Interpreter {
     }
 
     private static Object evalAssignExpr(Node node, DefaultContext context) {
-        JsProperty prop = new JsProperty(node.children.get(0), context);
-        Object value = eval(node.children.get(2), context);
-        Object result = switch (node.children.get(1).token.type) {
+        JsProperty prop = new JsProperty(node.get(0), context);
+        Object value = eval(node.get(2), context);
+        Object result = switch (node.get(1).token.type) {
             case EQ -> value;
             case PLUS_EQ -> Terms.add(prop.get(), value);
             case MINUS_EQ -> terms(prop.get(), value).min();
@@ -72,7 +72,7 @@ class Interpreter {
             case GT_GT_EQ -> terms(prop.get(), value).bitShiftRight();
             case LT_LT_EQ -> terms(prop.get(), value).bitShiftLeft();
             case GT_GT_GT_EQ -> terms(prop.get(), value).bitShiftRightUnsigned();
-            default -> throw new RuntimeException("unexpected assignment operator: " + node.children.get(1));
+            default -> throw new RuntimeException("unexpected assignment operator: " + node.get(1));
         };
         prop.set(result);
         return result;
@@ -80,7 +80,7 @@ class Interpreter {
 
     private static Object evalBlock(Node node, DefaultContext context) {
         Object blockResult = null;
-        for (Node child : node.children) {
+        for (Node child : node) {
             if (child.type == NodeType.STATEMENT) {
                 blockResult = eval(child, context);
                 if (context.isStopped()) {
@@ -101,7 +101,7 @@ class Interpreter {
 
     @SuppressWarnings("unchecked")
     private static Object evalDeleteStmt(Node node, DefaultContext context) {
-        JsProperty prop = new JsProperty(node.children.get(1).children.getFirst(), context);
+        JsProperty prop = new JsProperty(node.get(1).getFirst(), context);
         String key = prop.name == null ? prop.index + "" : prop.name;
         if (prop.object instanceof Map) {
             ((Map<String, Object>) prop.object).remove(key);
@@ -112,7 +112,7 @@ class Interpreter {
     }
 
     private static Object evalExpr(Node node, DefaultContext context) {
-        node = node.children.getFirst();
+        node = node.getFirst();
         context.event(Event.Type.EXPRESSION_ENTER, node);
         try {
             Object result = eval(node, context);
@@ -134,7 +134,7 @@ class Interpreter {
 
     private static Object evalExprList(Node node, DefaultContext context) {
         Object result = null;
-        for (Node child : node.children) {
+        for (Node child : node) {
             if (child.type == NodeType.EXPR) {
                 result = eval(child, context);
             }
@@ -146,17 +146,17 @@ class Interpreter {
     private static Object evalFnCall(Node node, DefaultContext context, boolean newKeyword) {
         Node fnArgsNode;
         if (newKeyword) {
-            node = node.children.getFirst();
+            node = node.getFirst();
             // check for new keyword with no parentheses for the constructor
-            if (node.children.size() == 1) {
+            if (node.size() == 1) {
                 fnArgsNode = null;
             } else {
-                fnArgsNode = node.children.get(2);
-                node = node.children.getFirst();
+                fnArgsNode = node.get(2);
+                node = node.getFirst();
             }
         } else {
-            fnArgsNode = node.children.get(2);
-            node = node.children.getFirst();
+            fnArgsNode = node.get(2);
+            node = node.getFirst();
         }
         JsProperty prop = new JsProperty(node, context, true);
         Object o = prop.get();
@@ -168,12 +168,12 @@ class Interpreter {
             throw new RuntimeException(node.toStringWithoutType() + " is not a function");
         }
         List<Object> argsList = new ArrayList<>();
-        int argsCount = fnArgsNode == null ? 0 : fnArgsNode.children.size();
+        int argsCount = fnArgsNode == null ? 0 : fnArgsNode.size();
         for (int i = 0; i < argsCount; i++) {
-            Node fnArgNode = fnArgsNode.children.get(i);
-            Node argNode = fnArgNode.children.get(0);
+            Node fnArgNode = fnArgsNode.get(i);
+            Node argNode = fnArgNode.get(0);
             if (argNode.isToken()) { // DOT_DOT_DOT
-                Object arg = eval(fnArgNode.children.get(1), context);
+                Object arg = eval(fnArgNode.get(1), context);
                 if (arg instanceof List) {
                     argsList.addAll((List<Object>) arg);
                 } else if (arg instanceof JsArray array) {
@@ -204,43 +204,43 @@ class Interpreter {
     }
 
     private static Object evalFnExpr(Node node, DefaultContext context) {
-        if (node.children.get(1).token.type == IDENT) {
-            JsFunctionNode fn = new JsFunctionNode(false, node, argNames(node.children.get(2)), node.children.getLast(), context);
-            context.put(node.children.get(1).getText(), fn);
+        if (node.get(1).token.type == IDENT) {
+            JsFunctionNode fn = new JsFunctionNode(false, node, argNames(node.get(2)), node.getLast(), context);
+            context.put(node.get(1).getText(), fn);
             return fn;
         } else {
-            return new JsFunctionNode(false, node, argNames(node.children.get(1)), node.children.getLast(), context);
+            return new JsFunctionNode(false, node, argNames(node.get(1)), node.getLast(), context);
         }
     }
 
     private static Object evalFnArrowExpr(Node node, DefaultContext context) {
         List<String> argNames;
-        if (node.children.getFirst().token.type == IDENT) {
-            argNames = Collections.singletonList(node.children.getFirst().getText());
+        if (node.getFirst().token.type == IDENT) {
+            argNames = Collections.singletonList(node.getFirst().getText());
         } else {
-            argNames = argNames(node.children.getFirst());
+            argNames = argNames(node.getFirst());
         }
-        return new JsFunctionNode(true, node, argNames, node.children.getLast(), context);
+        return new JsFunctionNode(true, node, argNames, node.getLast(), context);
     }
 
     private static Object evalForStmt(Node node, DefaultContext context) {
         DefaultContext forContext = new DefaultContext(context, node);
         forContext.event(Event.Type.CONTEXT_ENTER, node);
-        Node forBody = node.children.getLast();
+        Node forBody = node.getLast();
         Object forResult = null;
-        if (node.children.get(2).token.type == SEMI) {
+        if (node.get(2).token.type == SEMI) {
             // rare case: "for(;;)"
-        } else if (node.children.get(3).token.type == SEMI) {
-            eval(node.children.get(2), forContext);
-            if (node.children.get(4).token.type == SEMI) {
+        } else if (node.get(3).token.type == SEMI) {
+            eval(node.get(2), forContext);
+            if (node.get(4).token.type == SEMI) {
                 // rare no-condition case: "for(init;;increment)"
             } else {
-                Node forAfter = node.children.get(6).token.type == R_PAREN ? null : node.children.get(6);
+                Node forAfter = node.get(6).token.type == R_PAREN ? null : node.get(6);
                 int index = -1;
                 while (true) {
                     index++;
                     forContext.iteration = index;
-                    Object forCondition = eval(node.children.get(4), forContext);
+                    Object forCondition = eval(node.get(4), forContext);
                     if (Terms.isTruthy(forCondition)) {
                         forResult = eval(forBody, forContext);
                         if (forContext.isStopped()) {
@@ -260,14 +260,14 @@ class Interpreter {
                 }
             }
         } else { // for in / of
-            boolean in = node.children.get(3).token.type == IN;
-            Object forObject = eval(node.children.get(4), forContext);
+            boolean in = node.get(3).token.type == IN;
+            Object forObject = eval(node.get(4), forContext);
             Iterable<KeyValue> iterable = JsObject.toIterable(forObject);
             String varName;
-            if (node.children.get(2).type == NodeType.VAR_STMT) {
-                varName = node.children.get(2).children.get(1).getText();
+            if (node.get(2).type == NodeType.VAR_STMT) {
+                varName = node.get(2).get(1).getText();
             } else {
-                varName = node.children.get(2).getText();
+                varName = node.get(2).getText();
             }
             int index = -1;
             for (KeyValue kv : iterable) {
@@ -294,29 +294,29 @@ class Interpreter {
     }
 
     private static Object evalIfStmt(Node node, DefaultContext context) {
-        if (Terms.isTruthy(eval(node.children.get(2), context))) {
-            return eval(node.children.get(4), context);
+        if (Terms.isTruthy(eval(node.get(2), context))) {
+            return eval(node.get(4), context);
         } else {
-            if (node.children.size() > 5) {
-                return eval(node.children.get(6), context);
+            if (node.size() > 5) {
+                return eval(node.get(6), context);
             }
             return null;
         }
     }
 
     private static Object evalInstanceOfExpr(Node node, DefaultContext context) {
-        return Terms.instanceOf(eval(node.children.get(0), context), eval(node.children.get(2), context));
+        return Terms.instanceOf(eval(node.get(0), context), eval(node.get(2), context));
     }
 
     @SuppressWarnings("unchecked")
     private static Object evalLitArray(Node node, DefaultContext context) {
-        int last = node.children.size() - 1;
+        int last = node.size() - 1;
         List<Object> list = new ArrayList<>();
         for (int i = 1; i < last; i++) {
-            Node elem = node.children.get(i);
-            Node exprNode = elem.children.get(0);
+            Node elem = node.get(i);
+            Node exprNode = elem.get(0);
             if (exprNode.token.type == DOT_DOT_DOT) { // spread
-                Object value = eval(elem.children.get(1), context);
+                Object value = eval(elem.get(1), context);
                 if (value instanceof List) {
                     List<Object> temp = (List<Object>) value;
                     list.addAll(temp);
@@ -337,15 +337,15 @@ class Interpreter {
 
     @SuppressWarnings("unchecked")
     private static Object evalLitObject(Node node, DefaultContext context) {
-        int last = node.children.size() - 1;
+        int last = node.size() - 1;
         Map<String, Object> map = new LinkedHashMap<>(last - 1);
         for (int i = 1; i < last; i++) {
-            Node elem = node.children.get(i);
-            Node keyNode = elem.children.getFirst();
+            Node elem = node.get(i);
+            Node keyNode = elem.getFirst();
             TokenType token = keyNode.token.type;
             String key;
             if (token == DOT_DOT_DOT) {
-                key = elem.children.get(1).getText();
+                key = elem.get(1).getText();
             } else if (token == S_STRING || token == D_STRING) {
                 key = (String) keyNode.token.literalValue();
             } else { // IDENT, NUMBER
@@ -357,11 +357,11 @@ class Interpreter {
                     Map<String, Object> temp = (Map<String, Object>) value;
                     map.putAll(temp);
                 }
-            } else if (elem.children.size() < 3) { // es6 enhanced object literals
+            } else if (elem.size() < 3) { // es6 enhanced object literals
                 Object value = context.get(key);
                 map.put(key, value);
             } else {
-                Node exprNode = elem.children.get(2);
+                Node exprNode = elem.get(2);
                 Object value = eval(exprNode, context);
                 map.put(key, value);
             }
@@ -371,7 +371,7 @@ class Interpreter {
 
     private static String evalLitTemplate(Node node, DefaultContext context) {
         StringBuilder sb = new StringBuilder();
-        for (Node child : node.children) {
+        for (Node child : node) {
             if (child.token.type == T_STRING) {
                 sb.append(child.token.text);
             } else if (child.type == NodeType.EXPR) {
@@ -386,7 +386,7 @@ class Interpreter {
     }
 
     private static Object evalLitExpr(Node node, DefaultContext context) {
-        node = node.children.getFirst();
+        node = node.getFirst();
         if (node.isToken()) {
             return node.token.literalValue();
         }
@@ -400,21 +400,21 @@ class Interpreter {
     }
 
     private static Object evalLogicBitExpr(Node node, DefaultContext context) {
-        return switch (node.children.get(1).token.type) {
+        return switch (node.get(1).token.type) {
             case AMP -> terms(node, context).bitAnd();
             case PIPE -> terms(node, context).bitOr();
             case CARET -> terms(node, context).bitXor();
             case GT_GT -> terms(node, context).bitShiftRight();
             case LT_LT -> terms(node, context).bitShiftLeft();
             case GT_GT_GT -> terms(node, context).bitShiftRightUnsigned();
-            default -> throw new RuntimeException("unexpected operator: " + node.children.get(1));
+            default -> throw new RuntimeException("unexpected operator: " + node.get(1));
         };
     }
 
     private static boolean evalLogicExpr(Node node, DefaultContext context) {
-        Object lhs = eval(node.children.get(0), context);
-        Object rhs = eval(node.children.get(2), context);
-        TokenType logicOp = node.children.get(1).token.type;
+        Object lhs = eval(node.get(0), context);
+        Object rhs = eval(node.get(2), context);
+        TokenType logicOp = node.get(1).token.type;
         if (Terms.NAN.equals(lhs) || Terms.NAN.equals(rhs)) {
             if (Terms.NAN.equals(lhs) && Terms.NAN.equals(rhs)) {
                 return logicOp == NOT_EQ || logicOp == NOT_EQ_EQ;
@@ -430,16 +430,16 @@ class Interpreter {
             case GT -> Terms.gt(lhs, rhs);
             case LT_EQ -> Terms.ltEq(lhs, rhs);
             case GT_EQ -> Terms.gtEq(lhs, rhs);
-            default -> throw new RuntimeException("unexpected operator: " + node.children.get(1));
+            default -> throw new RuntimeException("unexpected operator: " + node.get(1));
         };
     }
 
     private static Object evalLogicAndExpr(Node node, DefaultContext context) {
-        Object lhsValue = eval(node.children.get(0), context);
+        Object lhsValue = eval(node.get(0), context);
         boolean lhs = Terms.isTruthy(lhsValue);
-        if (node.children.get(1).token.type == AMP_AMP) {
+        if (node.get(1).token.type == AMP_AMP) {
             if (lhs) {
-                return eval(node.children.get(2), context);
+                return eval(node.get(2), context);
             } else {
                 return lhsValue;
             }
@@ -447,40 +447,40 @@ class Interpreter {
             if (lhs) {
                 return lhsValue;
             } else {
-                return eval(node.children.get(2), context);
+                return eval(node.get(2), context);
             }
         }
     }
 
     private static Object evalLogicTernExpr(Node node, DefaultContext context) {
-        if (Terms.isTruthy(eval(node.children.get(0), context))) {
-            return eval(node.children.get(2), context);
+        if (Terms.isTruthy(eval(node.get(0), context))) {
+            return eval(node.get(2), context);
         } else {
-            return eval(node.children.get(4), context);
+            return eval(node.get(4), context);
         }
     }
 
     private static Object evalMathAddExpr(Node node, DefaultContext context) {
-        return switch (node.children.get(1).token.type) {
-            case PLUS -> Terms.add(eval(node.children.get(0), context), eval(node.children.get(2), context));
+        return switch (node.get(1).token.type) {
+            case PLUS -> Terms.add(eval(node.get(0), context), eval(node.get(2), context));
             case MINUS -> terms(node, context).min();
-            default -> throw new RuntimeException("unexpected operator: " + node.children.get(1));
+            default -> throw new RuntimeException("unexpected operator: " + node.get(1));
         };
     }
 
     private static Object evalMathMulExpr(Node node, DefaultContext context) {
-        return switch (node.children.get(1).token.type) {
+        return switch (node.get(1).token.type) {
             case STAR -> terms(node, context).mul();
             case SLASH -> terms(node, context).div();
             case PERCENT -> terms(node, context).mod();
-            default -> throw new RuntimeException("unexpected operator: " + node.children.get(1));
+            default -> throw new RuntimeException("unexpected operator: " + node.get(1));
         };
     }
 
     private static Object evalMathPostExpr(Node node, DefaultContext context) {
-        JsProperty postProp = new JsProperty(node.children.get(0), context);
+        JsProperty postProp = new JsProperty(node.get(0), context);
         Object postValue = postProp.get();
-        switch (node.children.get(1).token.type) {
+        switch (node.get(1).token.type) {
             case PLUS_PLUS:
                 postProp.set(Terms.add(postValue, 1));
                 break;
@@ -488,15 +488,15 @@ class Interpreter {
                 postProp.set(terms(postValue, 1).min());
                 break;
             default:
-                throw new RuntimeException("unexpected operator: " + node.children.get(1));
+                throw new RuntimeException("unexpected operator: " + node.get(1));
         }
         return postValue;
     }
 
     private static Object evalMathPreExpr(Node node, DefaultContext context) {
-        JsProperty prop = new JsProperty(node.children.get(1).children.getFirst(), context);
+        JsProperty prop = new JsProperty(node.get(1).getFirst(), context);
         final Object value = prop.get();
-        return switch (node.children.get(0).token.type) {
+        return switch (node.get(0).token.type) {
             case PLUS_PLUS -> {
                 prop.set(Terms.add(value, 1));
                 yield prop.get();
@@ -507,13 +507,13 @@ class Interpreter {
             }
             case MINUS -> terms(value, -1).mul();
             case PLUS -> Terms.objectToNumber(value);
-            default -> throw new RuntimeException("unexpected operator: " + node.children.getFirst());
+            default -> throw new RuntimeException("unexpected operator: " + node.getFirst());
         };
     }
 
     private static Object evalProgram(Node node, DefaultContext context) {
         Object progResult = null;
-        for (Node child : node.children) {
+        for (Node child : node) {
             progResult = eval(child, context);
             if (context.isError()) {
                 Object errorThrown = context.getErrorThrown();
@@ -532,23 +532,23 @@ class Interpreter {
     }
 
     private static Object evalRefExpr(Node node, DefaultContext context) {
-        if (node.children.getFirst().type == NodeType.FN_ARROW_EXPR) { // arrow function
-            return evalFnArrowExpr(node.children.getFirst(), context);
+        if (node.getFirst().type == NodeType.FN_ARROW_EXPR) { // arrow function
+            return evalFnArrowExpr(node.getFirst(), context);
         } else {
             return context.get(node.getText());
         }
     }
 
     private static Object evalReturnStmt(Node node, DefaultContext context) {
-        if (node.children.size() > 1) {
-            return context.stopAndReturn(eval(node.children.get(1), context));
+        if (node.size() > 1) {
+            return context.stopAndReturn(eval(node.get(1), context));
         } else {
             return context.stopAndReturn(null);
         }
     }
 
     private static Object evalStatement(Node node, DefaultContext context) {
-        node = node.children.getFirst(); // go straight to relevant node
+        node = node.getFirst(); // go straight to relevant node
         if (node.token.type == SEMI) { // ignore empty statements
             return null;
         }
@@ -592,10 +592,10 @@ class Interpreter {
     }
 
     private static Object evalSwitchStmt(Node node, DefaultContext context) {
-        Object switchValue = eval(node.children.get(2), context);
+        Object switchValue = eval(node.get(2), context);
         List<Node> caseNodes = node.findChildrenOfType(NodeType.CASE_BLOCK);
         for (Node caseNode : caseNodes) {
-            Object caseValue = eval(caseNode.children.get(1), context);
+            Object caseValue = eval(caseNode.get(1), context);
             if (Terms.eq(switchValue, caseValue, true)) {
                 Object caseResult = evalBlock(caseNode, context);
                 if (context.isStopped()) {
@@ -611,21 +611,21 @@ class Interpreter {
     }
 
     private static Object evalTryStmt(Node node, DefaultContext context) {
-        Object tryValue = eval(node.children.get(1), context);
+        Object tryValue = eval(node.get(1), context);
         Node finallyBlock = null;
-        if (node.children.get(2).token.type == CATCH) {
-            if (node.children.size() > 7) {
-                finallyBlock = node.children.get(8);
+        if (node.get(2).token.type == CATCH) {
+            if (node.size() > 7) {
+                finallyBlock = node.get(8);
             }
             if (context.isError()) {
                 DefaultContext catchContext = new DefaultContext(context, node);
                 catchContext.event(Event.Type.CONTEXT_ENTER, node);
-                if (node.children.get(3).token.type == L_PAREN) {
-                    String errorName = node.children.get(4).getText();
+                if (node.get(3).token.type == L_PAREN) {
+                    String errorName = node.get(4).getText();
                     catchContext.put(errorName, context.getErrorThrown());
-                    tryValue = eval(node.children.get(6), catchContext);
+                    tryValue = eval(node.get(6), catchContext);
                 } else { // catch without variable name, 3 is block
-                    tryValue = eval(node.children.get(3), context);
+                    tryValue = eval(node.get(3), context);
                 }
                 if (context.isError()) { // catch threw error,
                     tryValue = null;
@@ -633,8 +633,8 @@ class Interpreter {
                 context.updateFrom(catchContext);
                 catchContext.event(Event.Type.CONTEXT_EXIT, node);
             }
-        } else if (node.children.get(2).token.type == FINALLY) {
-            finallyBlock = node.children.get(3);
+        } else if (node.get(2).token.type == FINALLY) {
+            finallyBlock = node.get(3);
         }
         if (finallyBlock != null) {
             DefaultContext finallyContext = new DefaultContext(context, node);
@@ -649,22 +649,22 @@ class Interpreter {
     }
 
     private static Object evalUnaryExpr(Node node, DefaultContext context) {
-        Object unaryValue = eval(node.children.get(1), context);
-        return switch (node.children.get(0).token.type) {
+        Object unaryValue = eval(node.get(1), context);
+        return switch (node.getFirst().token.type) {
             case NOT -> !Terms.isTruthy(unaryValue);
             case TILDE -> Terms.bitNot(unaryValue);
-            default -> throw new RuntimeException("unexpected operator: " + node.children.getFirst());
+            default -> throw new RuntimeException("unexpected operator: " + node.getFirst());
         };
     }
 
     private static Object evalVarStmt(Node node, DefaultContext context) {
         Object varValue;
-        if (node.children.size() > 3) {
-            varValue = eval(node.children.get(3), context);
+        if (node.size() > 3) {
+            varValue = eval(node.get(3), context);
         } else {
             varValue = Terms.UNDEFINED;
         }
-        List<Node> varNames = node.children.get(1).findAll(IDENT);
+        List<Node> varNames = node.get(1).findAll(IDENT);
         // TODO let & const
         for (Node varName : varNames) {
             String name = varName.getText();
@@ -679,8 +679,8 @@ class Interpreter {
     private static Object evalWhileStmt(Node node, DefaultContext context) {
         DefaultContext whileContext = new DefaultContext(context, node);
         whileContext.event(Event.Type.CONTEXT_ENTER, node);
-        Node whileBody = node.children.getLast();
-        Node whileExpr = node.children.get(2);
+        Node whileBody = node.getLast();
+        Node whileExpr = node.get(2);
         Object whileResult = null;
         while (true) {
             Object whileCondition = eval(whileExpr, whileContext);
@@ -704,8 +704,8 @@ class Interpreter {
     private static Object evalDoWhileStmt(Node node, DefaultContext context) {
         DefaultContext doContext = new DefaultContext(context, node);
         doContext.event(Event.Type.CONTEXT_ENTER, node);
-        Node doBody = node.children.get(1);
-        Node doExpr = node.children.get(4);
+        Node doBody = node.get(1);
+        Node doExpr = node.get(4);
         Object doResult;
         while (true) {
             doResult = eval(doBody, doContext);
@@ -751,17 +751,17 @@ class Interpreter {
             case MATH_MUL_EXPR -> evalMathMulExpr(node, context);
             case MATH_POST_EXPR -> evalMathPostExpr(node, context);
             case MATH_PRE_EXPR -> evalMathPreExpr(node, context);
-            case NEW_EXPR -> evalFnCall(node.children.get(1), context, true);
-            case PAREN_EXPR -> evalExpr(node.children.get(1), context);
+            case NEW_EXPR -> evalFnCall(node.get(1), context, true);
+            case PAREN_EXPR -> evalExpr(node.get(1), context);
             case PROGRAM -> evalProgram(node, context);
             case REF_EXPR -> evalRefExpr(node, context);
             case REF_BRACKET_EXPR, REF_DOT_EXPR -> new JsProperty(node, context).get();
             case RETURN_STMT -> evalReturnStmt(node, context);
             case STATEMENT -> evalStatement(node, context);
             case SWITCH_STMT -> evalSwitchStmt(node, context);
-            case THROW_STMT -> context.stopAndThrow(eval(node.children.get(1), context));
+            case THROW_STMT -> context.stopAndThrow(eval(node.get(1), context));
             case TRY_STMT -> evalTryStmt(node, context);
-            case TYPEOF_EXPR -> Terms.typeOf(eval(node.children.get(1), context));
+            case TYPEOF_EXPR -> Terms.typeOf(eval(node.get(1), context));
             case UNARY_EXPR -> evalUnaryExpr(node, context);
             case VAR_STMT -> evalVarStmt(node, context);
             case WHILE_STMT -> evalWhileStmt(node, context);
